--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -264,3 +264,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 16px;
   }
 }
+.rating-stars {
+  overflow: visible !important;
+  z-index: 10;
+}
+
+.rating-stars span {
+  display: inline-block;
+}
